--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,14 @@
-__pycache__
 .vscode/
-*.db
-*.so
-*.d
-
+__pycache__
 unused/
-.fna
-output/
-output_old/
-output_used_for_quals/
-339_output_ortho/
-339_output_genome/
-339_output_genome_ns/
-cds/
-guides.db
-guides.db-journal
-genomes/
-datasets/
-test.txt
-txt.txt
+archive
+data/cache/
+data/archive/
+data/input/cds/
+data/input/genomes/
+data/output/
+data/output_archive/
 .pytest_cache/
-data/
-test.ipynb
-test.cpp
+test.*
 out
+test_guide_finder.py
