--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
-* linguist-vendored
-*.py linguist-vendored=false
-*.cpp linguist-vendored=false
+# Mark all files as not detectable
+* linguist-detectable=false
+
+# Enable detection for specific file extensions
+*.cpp linguist-detectable=true
+*.py linguist-detectable=true
+*.pyx linguist-detectable=true
